--- a/package.json
+++ b/package.json
@@ -21,8 +21,19 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "hammerjs": "^2.0.8",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pbkdf2": "^3.0.17",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
     "rxjs": "~6.4.0",
+    "sequelize": "^5.21.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
